--- a/app/views/medical_records/show.html.erb
+++ b/app/views/medical_records/show.html.erb
@@ -1,19 +1,19 @@
-
 <div class="container">
-  <h1>Medical Record</h1>
+  <h1 class="text-center my-4 text-primary">Medical Record</h1>
+
   <div class="card mb-4">
     <div class="card-body">
       <h5 class="card-title">Record Details</h5>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <strong>Date:</strong>
           <p><%= @medical_record.date.strftime('%B %d, %Y') %></p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <strong>Patient Name:</strong>
           <p><%= @medical_record.patient.name %></p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <strong>Patient Email:</strong>
           <p><%= @medical_record.patient.email %></p>
         </div>
@@ -22,19 +22,90 @@
           <p><%= @medical_record.details %></p>
         </div>
       </div>
-      <div class="mt-4">
-        <%= link_to 'Add Attachment', class: 'btn btn-secondary' %>
+      <hr >
+      <div>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
           Add Comment
-          </button>
- <%= link_to 'View Comments', user_medical_record_comments_path(current_user, @medical_record), class: 'btn btn-secondary' %>
+        </button>
+        <%= link_to 'View Comments', user_medical_record_comments_path(current_user, @medical_record), class: 'btn btn-secondary ms-2' %>
+        </div>
+    </div>
+  </div>
+
+  <div class="card mb-4">
+    <div class="card-body">
+      <h5 class="card-title">Attachments</h5>
+      <% if @medical_record.attachments.any? %>
+        <table class="table table-hover table-responsive">
+          <thead>
+            <tr>
+              <th scope="col">File Name</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @medical_record.attachments.each do |attachment| %>
+              <tr>
+                <td><%= attachment.filename.to_s %></td>
+                
+                <td class="d-flex flex-row">
+                  <%= link_to 'Preview', rails_blob_path(attachment,disposition: "_inline"),target: '_blank', class: 'btn btn-sm btn-outline-primary me-2' %>
       
+                  <%= link_to 'Download', rails_blob_path(attachment, disposition: "attachment"), class: 'btn btn-sm btn-outline-secondary me-2' %>
+                   <%= button_to 'Delete', 
+                      user_medical_record_delete_attachment_path(
+                        user_id: @medical_record.patient.id, 
+                        medical_record_id: @medical_record.id, 
+                        attachment_id: attachment.id
+                      ), 
+                      method: :delete, 
+                      data: { confirm: 'Are you sure?' }, 
+                      class: 'btn btn-sm btn-outline-danger' %>
+               </td>
+
+
+
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <p class="text-muted">No attachments available.</p>
+      <% end %>
+      <div class="mt-4">
+        <button type="button" class="btn btn-success ms-2" data-bs-toggle="modal" data-bs-target="#addAttachmentModal">
+          Add Attachment
+        </button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal -->
+<!-- Add Attachment Modal -->
+<div class="modal fade" id="addAttachmentModal" tabindex="-1" aria-labelledby="addAttachmentModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addAttachmentModalLabel">Add Attachment</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <%= form_with(model: [@patient, @medical_record], url: user_medical_record_path(@medical_record.patient.id, @medical_record), method: :patch, local: true, multipart: true) do |f| %>
+ 
+        <div class="mb-3">
+            <%= f.label :attachments, 'Upload Files' %>
+            <%= f.file_field :attachments, multiple: true, class: 'form-control' %>
+          </div>
+          <div class="mb-3">
+            <%= f.submit 'Upload Files', class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Add Comment Modal -->
 <div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
