--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -34,7 +34,7 @@
 
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
-          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female']]), {}, class: "form-control" ,required: true%>
+          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control ",required: true%>
         </div>
 
         <!-- Role selection for admin and staff -->
