--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,34 +6,49 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
      crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-<!-- Flash notices -->
-<% if flash[:notice] %>
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= flash[:notice] %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-<% end %>
+    <div class="container-fluid">
+      <% if user_signed_in? %>
+        <div class="row flex-nowrap">
+          
+            <!-- Sidebar on the left -->
+            <%= render 'shared/sidebar' %>
+            
+            <!-- Main content on the right -->
+            <div class="col">
+              <!-- Custom responsive navbar at the top of the right side -->
+              <%= render 'shared/navbar' %>
+              <!-- Flash messages -->
+              <div class="container mt-3">
+                <% flash.each do |type, message| %>
+                  <% type = (type == 'notice' ? 'success' : (type == 'alert' ? 'danger' : type)) %>
+                  <div class="alert alert-<%= type %> alert-dismissible fade show" role="alert">
+                    <%= message %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                <% end %>
+              </div>
 
-<!-- Flash alerts -->
-<% if flash[:alert] %>
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <%= flash[:alert] %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-<% end %>
-
-    <%= yield %>
-  </body>
- 
+              <!-- Main content area -->
+              <div class="content mt-3">
+                <%= yield %>
+              </div>
+            </div>
+        
+        </div>
+       <% else %>
+         
+            <%= yield %>
+         
+        <% end %>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
- 
+  </body>
 </html>
