--- a/app/views/medical_records/index.html.erb
+++ b/app/views/medical_records/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Medical Records</h1>
-    <%= link_to 'Create Medical Record', new_user_medical_record_path(@user), class: 'btn btn-primary' %>
+    <%= link_to 'Create Medical Record', new_user_medical_record_path(@patient), class: 'btn btn-primary' %>
   </div>
   <% if @medical_records.any? %>
     <table class="table">
