--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -8,15 +8,15 @@
         <%= render "devise/shared/error_messages", resource: @patient %>
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true %>
+          <%= f.text_field :name, class: "form-control", autofocus: true ,required: true %>
         </div>
         <div class="form-group">
           <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
+          <%= f.email_field :email, class: "form-control", autocomplete: "email",required: true  %>
         </div>
         <div class="form-group">
           <%= f.label :password, class: "form-label" %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
           <% if @minimum_password_length %>
             <br />
             <em><%= @minimum_password_length %> characters minimum</em>
@@ -24,16 +24,16 @@
         </div>
         <div class="form-group">
           <%= f.label :password_confirmation, class: "form-label" %><br />
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true %>
         </div>
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
-          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
+          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" ,required: true  %>
         </div>
         <!-- Role selection for admin and staff -->
         
-        <div class="form-group text-center">
-         <%= f.submit @patient.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' %>
+        <div class="form-group text-center mt-4">
+         <%= f.submit @patient.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' ,required: true  %>
         </div>
       <% end %>
     </div>
