--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,9 +1,9 @@
-<%= render layout: "layouts/users" do %> 
-   
 
-
-<h1>Search Results</h1>
-
+<!-- Flex container for header and button -->
+<div class="d-flex flex-row justify-content-between align-items-center  mb-3 mt-5 border p-3">
+  <!-- Heading -->
+  <h3 class="text-primary mb-0 fs-4 fs-md-6 ">Search Results</h3>
+</div>
 <% if @query.present? %>
   <% if @user_results.present? %>
     <div class="table-responsive">
@@ -50,10 +50,8 @@
     </div>
     </div>
   <% else %>
-    <p>No users found</p>
+     <div class="alert alert-danger" role="alert">
+          No Users found.
+        </div>
   <% end %>
-
-
-<% end %>
-
 <% end %>
