--- a/app/views/medical_records/_form.html.erb
+++ b/app/views/medical_records/_form.html.erb
@@ -19,11 +19,11 @@
         <div class="row">
           <div class="col-md-6">
             <label>Patient Name</label>
-            <p class="form-control-plaintext"><%= @patient.name %></p>
+            <p class="form-control-plaintext"><%= @user.name %></p>
           </div>
           <div class="col-md-6">
             <label>Patient Email</label>
-            <p class="form-control-plaintext"><%= @patient.email %></p>
+            <p class="form-control-plaintext"><%= @user.email %></p>
           </div>
         </div>
       </div>
