--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-expand">
       <% if user_signed_in? %>
         <div class="row flex-nowrap">
           
