--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -30,7 +30,7 @@
       </div>
       <div class="form-group col-md-4">
         <%= form.label :doctor_id, class: "form-label" %>
-        <%= form.select :doctor_id, options_from_collection_for_select(@doctors, 'id', 'name'), { prompt: "Select Doctor" }, class: "form-control", id: "doctor_select" %>
+        <%= form.select :doctor_id, [], { prompt: "Select Doctor" }, class: "form-control", id: "doctor_select" %>
       </div>
     </div>
     <div class="form-group">
@@ -55,7 +55,7 @@
       var endTime = endTimeField.value;
 
       if (startTime && endTime) {
-        var userId = <%= current_user.id %> // Ensure this Ruby code outputs the current user's ID
+        var userId = <%= current_user.id %>; // Ensure this Ruby code outputs the current user's ID
         fetch(`/users/${userId}/appointments/available_doctors?start_time=${encodeURIComponent(startTime)}&end_time=${encodeURIComponent(endTime)}`)
           .then(response => response.json())
           .then(data => {
@@ -63,7 +63,10 @@
             data.forEach(function(doctor) {
               var option = document.createElement('option');
               option.value = doctor.id;
-              option.text = doctor.name;
+              option.text = `${doctor.name} (${doctor.availability})`;
+              if (doctor.availability === 'Not Available') {
+                option.disabled = true;
+              }
               doctorSelect.appendChild(option);
             });
           })
@@ -78,3 +81,4 @@
     endTimeField.addEventListener('change', fetchAvailableDoctors);
   });
 </script>
+
