--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -23,20 +23,17 @@
     </div>
     <div class="form-row">
       <div class="form-group col-md-4">
-        <%= form.datetime_local_field :start_time, class: "form-control", placeholder: "Start Time", id: "start_time" %>
+        <%= form.datetime_local_field :start_time, class: "form-control", data: { placeholder: "Start Time" }, id: "start_time" %>
       </div>
       <div class="form-group col-md-4">
-        <%= form.datetime_local_field :end_time, class: "form-control", placeholder: "End Time", id: "end_time" %>
+        <%= form.datetime_local_field :end_time, class: "form-control",data: { placeholder: "Start Time" }, id: "end_time" %>
       </div>
       <div class="form-group col-md-4">
         <%= form.label :doctor_id, class: "form-label" %>
         <%= form.select :doctor_id, [], { prompt: "Select Doctor" }, class: "form-control", id: "doctor_select" %>
       </div>
     </div>
-    <div class="form-group">
-      <%= form.label :status, class: "form-label" %>
-      <%= form.select :status, options_for_select(Appointment.statuses.keys.map { |status| [status.humanize, status] }, 'scheduled'), { prompt: "Select Status" }, class: "form-control" %>
-    </div>
+   
     <div class="form-group">
       <%= form.text_area :message, class: "form-control", rows: 4, placeholder: "Message (Optional)" %>
     </div>
