--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -29,7 +29,9 @@
 
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+             
+        <%= link_to "Register as a Patient", new_patient_path, class: "nav-link" %>
+   
           </li>
         </ul>
         
